[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aio-lib-sandbox"
dynamic = ["version"]
description = "Python SDK for Adobe Runtime Sandboxes"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
]

[tool.hatch.version]
path = "src/aio_lib_sandbox/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aio_lib_sandbox"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src/aio_lib_sandbox --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["src/aio_lib_sandbox"]

[tool.coverage.report]
show_missing = true
